# openbooks

./: .gitignore  ASSESSMENT_METHODOLOGY.md  Dockerfile  README.md  UI_REDESIGN_PLAN.md  docker-compose.yml  entity_enrichment.json  index.html  pyproject.toml  query.py  requirements.txt  server.py  tier_config.yaml  unattributed_enrichment.json
agency/: README.md  build_ag_findings.py  download_from_csv.py  download_state_agency_reports.py  extract_audit_reports.py  extract_questioned_amounts.py  load_ag_to_warehouse.py  make_grok_candidates.py  make_qc_candidates_v2.py  match_to_openbooks.py  questioned_amounts.md
budget_pdfs/: DASHBOARD_QUERY_TEMPLATES.md  dashboard_query_templates.json  fy2026_jlbc_structured.json  fy2027_all_brbs_structured.json  fy2027_brbs_structured.json  fy2027_sb1847_structured.json
mart/: accountability_targets.csv  entity_crosswalk.csv  entity_keys.csv  entity_merges_report.txt  entity_nodes_vfirst.json  entity_tree_nodes.json  panel_result.json  used_predicates.json  vendor_targets.csv  vendor_verdicts.csv  verify_curated.json  verify_result.json  verify_targets.json
openbooks/: __init__.py  __main__.py  _sql.py  ask.py  bootstrap.py  db.py  queries.py  server.py
overtaker_handoff/: FINDINGS_REPORT.md  INTEGRATION_BRIEF.md  MANIFEST.md  TIERING_FINDINGS.md  TIERING_METHODOLOGY.md
scripts/: enrich_entities.py  enrich_unattributed.py  load_entity_enrichment.py  push_to_postgres.py
sql/: _canon.sql  _integration_brief_workflow.js  _make_browser.py  _panel_workflow.js  _verify_workflow.js  apply_crosswalk.sql  build_ag_context.sql  (+21 more)
(+29 files in other folders)
