[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openbooks"
version = "1.0.0"
description = "Analytics query layer over state checkbook spending data (Arizona OpenBooks)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "duckdb>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
openbooks = "openbooks.__main__:main"
openbooks-server = "openbooks.server:main"
openbooks-bootstrap = "openbooks.bootstrap:main"

[tool.setuptools]
packages = ["openbooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # docstrings/SQL strings may run long; line-length covers code
